[gd_scene load_steps=2 format=3 uid="uid://bvq8xk7y3m4qr"]

[ext_resource type="Script" path="res://scripts/systems/world/player_entity.gd" id="1_player_entity"]

[node name="PlayerEntity" type="CharacterBody2D"]
script = ExtResource("1_player_entity")

[node name="AvatarBuilder" type="Node2D" parent="."]

[node name="NameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -40.0
text = "Jugador"
horizontal_alignment = 1

[node name="SyncTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = false
